<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="horizontal"
    android:paddingVertical="8dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_music"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:gravity="center|start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="@string/peaches" />

        <TextView
            android:id="@+id/text_author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#CCCC"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            tools:text="@string/justin_bieber" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/layout_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/btn_prev"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_prev"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/btn_play_pause"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="15dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_play_arrow"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/btn_next"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_next"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_close" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>